// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Main / Integration Tests GraphQL fetcher should fetch and transform data into a valid sitemap 1`] = `
Array [
  "<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?><urlset xmlns=\\"http://www.sitemaps.org/schemas/sitemap/0.9\\" xmlns:image=\\"http://www.google.com/schemas/sitemap-image/1.1\\" xmlns:video=\\"http://www.google.com/schemas/sitemap-video/1.1\\"><url><0><loc>1</loc></0><1><loc>2</loc></1><2><loc>3</loc></2><3><loc>4</loc></3></url></urlset>",
]
`;

exports[`Main / Integration Tests Restful fetching should fetch and transform data into a valid sitemap 1`] = `
Array [
  "<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?><urlset xmlns=\\"http://www.sitemaps.org/schemas/sitemap/0.9\\" xmlns:image=\\"http://www.google.com/schemas/sitemap-image/1.1\\" xmlns:video=\\"http://www.google.com/schemas/sitemap-video/1.1\\"><url><loc>https://api.github.com/users/octocat</loc><lastmod>2011-01-25T18:44:36.000Z</lastmod></url></urlset>",
]
`;
